--- a/taskOutPro/package.json
+++ b/taskOutPro/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "vant": "^2.12.21",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
